# api-rust-salvo-rbatis

./: Cargo.toml  README.md
sql/: blog.sql
src/: database.rs  main.rs  routes.rs
