[package]
name = "api-tasks-salvo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.37.9", features = ["logging", "serve-static"] }
tokio = { version = "1.26.0", features = ["macros", "full"] }
log = "0.4.17"
fast_log = "1.5.54"
serde = { version = "1.0.156", features = ["derive"] }
rbs = { version = "4.1.1" }
rbatis = { version = "4.1.0" }
rbdc-mysql = { version = "4.1.0" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
once_cell = "1.17.1"
uuid = "1.3.0"
